fixed chat